--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 img {
     width: 50px; 
     height: 50px; 
-    border: 5px solid #777;
+    border: 5px solid #4CAF50;
     border-radius: 90px;
     margin: 0.5%;
 }
@@ -10,9 +10,23 @@ img:hover {
     cursor: pointer; 
 }
 
+/*dead center*/
+#login {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    top: 50%;
+    margin-top: -10px;
+    text-align: center;
+}
+
 .gravatar {
     margin-left: 0.5%; 
     font-size: 1.3rem; 
-    color:#4CAF50; 
+    color: tomato; 
     font-weight: bolder;
+}
+
+.gravatartext {
+    margin: -50px 0 25px 75px; 
 }
