--- a/chat/src/styles.css
+++ b/chat/src/styles.css
@@ -27,6 +27,26 @@ input[type="text"] {
     width: fit-content;
 }
 
+input[type="file"] {
+    width: fit-content; 
+    padding: 1%; 
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 0.5%; 
+    width: fit-content;
+}
+
+progress[value] {
+    margin-left: 0.5%; 
+    background-color: #eee;
+    border-radius: 5px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;
+    position: relative;
+}
+
 input[type="text"]::-webkit-input-placeholder {
     color: #fff; 
 }
