display all images in firebase storage folder

--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -18,6 +18,5 @@
     <input type="file" value="upload" (change)="fileButton($event)">
   </div>
 
-  <div *ngIf="(user | async)?.uid">
-    <img [src]="image">
+  <div [innerHtml]="imageList">
   </div>
