reload view when image is uploaded

--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -6,6 +6,16 @@
   <div id="login">
     <button *ngIf="!(user | async)?.uid" (click)="login()">Login</button>
   </div>
+
+
+  <div *ngIf="(user | async)?.uid" id="imagelist" [innerHtml]="imageList" [style.display]="display">
+  </div>
+
+  <div [style.display]="loading">
+    LOADING...
+  </div>
+
+
   <div *ngIf="(user | async)?.uid">
       <ul *ngFor="let item of items | async" [style.background]="color">
         <li>{{item.name}}: {{item.message}}</li>
@@ -13,10 +23,7 @@
   </div>
   <input type="text" *ngIf="(user | async)?.uid" placeholder="Press enter to chat" (keyup.enter)="sendData($event.target.value)" [(ngModel)]="messageValue" />
   
-  <div *ngIf="(user | async)?.uid">
+  <div *ngIf="(user | async)?.uid" id="imageloader">
     <progress value="{{progressVal}}" max="100">{{progressVal}}</progress><br>
     <input type="file" value="upload" (change)="fileButton($event)">
-  </div>
-
-  <div [innerHtml]="imageList">
   </div>
