--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -1,15 +1,3 @@
-img {
-    width: 50px; 
-    height: 50px; 
-    border: 5px solid #4CAF50;
-    border-radius: 90px;
-    margin: 0.5%;
-}
-
-img:hover {
-    cursor: pointer; 
-}
-
 /*dead center*/
 #login {
     position: absolute;
@@ -20,6 +8,27 @@ img:hover {
     text-align: center;
 }
 
+#imagelist {
+    display: inline-block;
+    font-size: 0; 
+    margin: 1%; 
+}
+
+#imagelist img {
+    width: 150px;  
+    height: auto;   
+    border: none;
+    border-radius: 0;
+    margin: 0.5%;
+    cursor: none; 
+}
+
+#imagecontainer {
+    margin-top: -12%; 
+    margin-left: 30%; 
+    width: 50%; 
+}
+
 .gravatar {
     margin-left: 0.5%; 
     font-size: 1.3rem; 
@@ -28,5 +37,5 @@ img:hover {
 }
 
 .gravatartext {
-    margin: -50px 0 25px 75px; 
+    margin: -50px 0 25px 65px; 
 }
