--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -1,24 +1,17 @@
   <!--displayName, email, photoURL-->
-  <div class="txtcenter" [style.display]="loading">
-    <h1>LOADING...</h1>
-  </div>
   <div *ngIf="(user | async)?.uid" class="gravatar">
     <a title="Log Out"><img *ngIf="(user | async)?.uid" (click)="logout()" [src]="(user | async)?.photoURL" ></a>
     <div class="gravatartext">Hello {{(user | async)?.displayName}}</div>
   </div>
-  <div class="upload">
-    <h1>Upload File</h1>
+  <div *ngIf="(user | async)?.uid" class="upload">
+    <h1 [innerHtml]="upload">Upload</h1>
   </div>
-  <div id="login" [style.display]="display">
+  <div id="login" *ngIf="!(user | async)?.uid" [style.display]="display">
     <button *ngIf="!(user | async)?.uid" (click)="login()">Login</button>
   </div>
 
-  <div class="txtcenter">
-    <h1>Photos</h1>
-  </div>
-  <div *ngIf="(user | async)?.uid" id="imagelist" [innerHtml]="imageList" [style.display]="display">
-  </div>
-
+  <div *ngIf="(user | async)?.uid" >
+    <h1 class="txtcenter nowright">Photos</h1>
   <div *ngIf="(user | async)?.uid" id="imageloader">
     <progress value="{{progressVal}}" max="100">{{progressVal}}</progress><br>
     <input type="file" value="upload" (change)="fileButton($event)">
@@ -29,5 +22,11 @@
         <li>{{item.name}}: {{item.message}}</li>
       </ul>
   <input type="text" *ngIf="(user | async)?.uid" placeholder="Press enter to chat" (keyup.enter)="sendData($event.target.value)" [(ngModel)]="messageValue" />
+  </div>
+
+  <div id="imagecontainer">
+    <div id="imagelist" *ngFor="let item of imageUrlArray">
+      <img *ngIf="(user | async)?.uid" [src]="item" />
+    </div>
   </div>
   
