--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -1,4 +1,3 @@
-/*dead center*/
 #login {
     position: absolute;
     width: 100%;
@@ -38,4 +37,57 @@
 
 .gravatartext {
     margin: -50px 0 25px 65px; 
+}
+
+@media only screen and (max-width: 700px) {
+    input[type="text"] {
+        width: 40%;
+        font-size: 10px; 
+    }
+
+    input[type="file"] {
+        width: 40%; 
+        padding: 0; 
+        margin: 0; 
+        font-size: 10px; 
+    }
+
+    progress[value] {
+        width: 40%; 
+        padding: 0; 
+        margin: 0; 
+    }
+
+    ul {
+        width: 40%; 
+        font-size: 12px;
+        padding: 0.5%; 
+        border-radius: 7px; 
+    }
+
+    #imagecontainer {
+        margin-top: -60%; 
+        margin-left: 60%; 
+        width: 70%; 
+    }
+
+    #imagelist {
+        padding: 0; 
+        margin: 0; 
+    }
+    
+    #imagelist img {
+        width: 40%; 
+        height: auto; 
+        padding: 0.5%; 
+        margin: 0;  
+    }
+
+    .nowright {
+        text-align: right;
+        margin-right: 14%;
+        float: right;  
+        width: 40%; 
+        margin-top: -13%; 
+    }
 }
