--- a/chat/src/styles.css
+++ b/chat/src/styles.css
@@ -35,6 +35,7 @@ input[type="file"] {
     display: inline-block;
     font-size: 16px;
     width: fit-content;
+    cursor: pointer; 
 }
 
 progress[value] {
@@ -58,7 +59,7 @@ ul {
     border-radius: 90px;
 }
 
-h1 {
+h1,h2,h3,h4 {
     color: tomato; 
 }
 
