working on voting system

--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -8,6 +8,8 @@
     <h1 [innerHtml]="upload">Upload</h1>
   </div>
   <div id="login" *ngIf="!(user | async)?.uid" [style.display]="display">
+    <h1 class="largefont">Welcome to Top Photo</h1>
+    <h3>Sign in With:</h3>
     <button *ngIf="!(user | async)?.uid" (click)="login()">Sign in with Google</button>
   </div>
 <!--upload file input-->
@@ -28,9 +30,10 @@
   </div>
 <!--Display images that have been uploaded 
 to Firebase Storage-->
-  <div id="imagecontainer">
+  <div id="imagecontainer" *ngIf="(user | async)?.uid">
     <div id="imagelist" *ngFor="let item of imageUrlArray">
-      <a [href]="item" target="_blank"><img *ngIf="(user | async)?.uid" [src]="item" /></a>
+      <a [href]="item" target="_blank"><img [src]="item" /></a>
+      <div class="vote" (click)="upvote(item)">[+] 0</div><div class="vote">[-]</div>
     </div>
   </div>
   
