--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 20px;
     top: 50%;
-    margin-top: -10px;
+    margin-top: -125px;
     text-align: center;
 }
 
@@ -26,6 +26,10 @@
     margin-top: -12%; 
     margin-left: 30%; 
     width: 50%; 
+}
+
+.largefont {
+    font-size: 3rem; 
 }
 
 .datemargin {
@@ -85,6 +89,10 @@
         height: auto; 
         padding: 0.5%; 
         margin: 0;  
+    }
+
+    .largefont {
+        font-size: 2rem; 
     }
 
     .datemargin {
