--- a/angularmlb/src/app/game/game.component.css
+++ b/angularmlb/src/app/game/game.component.css
@@ -1,3 +1,16 @@
 .score ol li {
     display: inline-block; 
 }
+
+.scorecontainer h1 {
+    display: inline;
+    vertical-align: top;
+    line-height: 28px;   
+}
+
+.scorecontainer p {
+    display: inline;
+    vertical-align: top;
+    font-size: 16px;
+    line-height: 28px;    
+}
