--- a/angularmlb/src/app/game/game.component.css
+++ b/angularmlb/src/app/game/game.component.css
@@ -14,3 +14,9 @@
     font-size: 16px;
     line-height: 28px;    
 }
+
+@media only screen and (max-width: 575px) {
+    .container {
+        text-align: center; 
+    }
+}
