--- a/angularmlb/src/app/game/game.component.html
+++ b/angularmlb/src/app/game/game.component.html
@@ -1,23 +1,25 @@
-<label>Team</label>
-  <select [(ngModel)]="team"> 
-    <option *ngFor="let val of teams" [attr.value]="val">{{val}}</option>
-  </select>
-  <label>Date</label>
-  <input type="date" [(ngModel)]="dateplayed" (change)="rundata()">
-  <h1>{{awaycity}} {{awayName}}</h1>
-  <div class="scorecontainer">
-    <h1>{{awayscore}}</h1><p>&nbsp;&nbsp;({{awaywin}}-{{awayloss}})</p>
-  </div>
-  <h1>{{homecity}} {{homeName}}</h1>
-  <div class="scorecontainer">
-    <h1>{{homescore}}</h1><p>&nbsp;&nbsp;({{homewin}}-{{homeloss}})</p>
-  </div>
-  <br>
-  <!--score for each inning-->
-  <div class="score">
-    <ol>
-      <li *ngFor="let item of inning; let i = index">{{i + 1}}</li><br>
-      <li *ngFor="let item of inning">{{item.away}}</li> {{awayName}}<br>
-      <li *ngFor="let item of inning">{{item.home}}</li> {{homeName}}
-    </ol>
-  </div>
+<div class="container">
+  <label>Team</label>
+    <select [(ngModel)]="team"> 
+      <option *ngFor="let val of teams" [attr.value]="val">{{val}}</option>
+    </select>
+    <label>Date</label>
+    <input type="date" [(ngModel)]="dateplayed" (change)="rundata()">
+    <h1>{{awaycity}} {{awayName}}</h1>
+    <div class="scorecontainer">
+      <h1>{{awayscore}}</h1><p>&nbsp;&nbsp;({{awaywin}}-{{awayloss}})</p>
+    </div>
+    <h1>{{homecity}} {{homeName}}</h1>
+    <div class="scorecontainer">
+      <h1>{{homescore}}</h1><p>&nbsp;&nbsp;({{homewin}}-{{homeloss}})</p>
+    </div>
+    <br>
+    <!--score for each inning-->
+    <div class="score">
+      <ol>
+        <li *ngFor="let item of inning; let i = index">{{i + 1}}</li><br>
+        <li *ngFor="let item of inning">{{item.away}}</li> {{awayName}}<br>
+        <li *ngFor="let item of inning">{{item.home}}</li> {{homeName}}
+      </ol>
+    </div>
+</div>
