--- a/angularmlb/src/app/news/news.component.css
+++ b/angularmlb/src/app/news/news.component.css
@@ -8,3 +8,31 @@
     margin-top: -19%; 
     text-align: center;
 }
+
+@media only screen and (max-width: 1440px) {
+    .newscontainer {
+        width: 80%; 
+        margin-left: 10%; 
+        margin-top: -22%; 
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .newscontainer {
+        width: 60%; 
+        margin-left: 25%; 
+        margin-top: -22%; 
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .newscontainer { 
+        float: none; 
+        margin: 0;  
+        width: 100%; 
+    }
+
+    .floatRight {
+        float: none; 
+    }
+}
