--- a/angularmlb/src/app/game/game.component.css
+++ b/angularmlb/src/app/game/game.component.css
@@ -22,6 +22,8 @@
 
 @media only screen and (max-width: 575px) {
     .container {
+        position: initial;
+        margin: 0; 
         text-align: center; 
     }
 }
