--- a/angularmlb/src/app/twitter/twitter.component.css
+++ b/angularmlb/src/app/twitter/twitter.component.css
@@ -7,3 +7,11 @@ h1 {
     margin: 0 auto;
     width: 30%; 
 }
+
+@media only screen and (max-width: 575px) {
+    .container {
+        margin: 0 auto;
+        width: 80%; 
+        text-align: center;
+    }
+}
