--- a/angularmlb/src/app/twitter/twitter.component.html
+++ b/angularmlb/src/app/twitter/twitter.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-  <h1>Twitter</h1>
-  <a class="twitter-timeline" href="https://twitter.com/MLB">Tweets by MLB</a>
+  <div>
+    <h1>Twitter</h1>
+    <a class="twitter-timeline" href="https://twitter.com/MLB">Tweets by MLB</a>
+  </div>
 </div>
