--- a/angularmlb/src/app/news/news.component.css
+++ b/angularmlb/src/app/news/news.component.css
@@ -1,7 +1,7 @@
 iframe {
     background-color: #fff; 
-    padding: 3%; 
-    margin: 1%; 
+    /*padding: 3%; 
+    margin: 1%; */
     border: 2px solid #ffffff;
     -moz-border-radius: 15px;
     border-radius: 15px;
