--- a/calorieTracker/src/app/content/content.component.css
+++ b/calorieTracker/src/app/content/content.component.css
@@ -1,3 +1,132 @@
 .container {
     text-align: center; 
 }
+
+input[type=range] {
+  height: 62px;
+  -webkit-appearance: none;
+  background: transparent;
+  margin: 10px 0;
+  width: 60%; 
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 3px 3px 2px #8A8A8A;
+  background: lawngreen;
+  border-radius: 5px;
+  border: 1px solid #FFFFFF;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 3px 3px 1px #000000;
+  border: 3px solid #FFFFFF;
+  height: 50px;
+  width: 24px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -22px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: lawngreen;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 3px 3px 2px #8A8A8A;
+  background: lawngreen;
+  border-radius: 5px;
+  border: 1px solid #FFFFFF;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 3px 3px 1px #000000;
+  border: 3px solid #FFFFFF;
+  height: 50px;
+  width: 24px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background:lawngreen;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 3px 3px 2px #8A8A8A;
+}
+input[type=range]::-ms-fill-upper {
+  background: lawngreen;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 3px 3px 2px #8A8A8A;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 3px 3px 1px #000000;
+  border: 3px solid #FFFFFF;
+  height: 50px;
+  width: 24px;
+  border-radius: 50px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: lawngreen;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: lawngreen;
+}
+
+input[type=text] {
+    padding:5px; 
+    border:2px solid #ccc; 
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+button {
+    padding: 0.5%; 
+    color: #ffffff;
+    background: tomato; 
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+}
+
+button:active {
+    color: tomato;
+    background: #ffffff; 
+    -webkit-border-radius: 10px;
+    border-radius: 10px; 
+}
+
+.tomato {
+    font-size: 4rem;
+    color: lawngreen;
+}
+
+@media only screen and (max-width: 1113px) {
+    button {
+        padding: 0.8%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    button {
+        padding: 2%;
+    }
+}
