--- a/calorieTracker/src/app/content/content.component.html
+++ b/calorieTracker/src/app/content/content.component.html
@@ -1,18 +1,15 @@
 <div class="container">
   <div *ngFor="let item of sliderValue | async">
-  <input type="range" [min]="minValue" [max]="maxValue" [value]="item" data-show-value="true" data-popup-enabled="true" [(ngModel)]="targetValue" (change)="targetValueChange()"> value {{targetValue}}
+  <input type="range" [min]="minValue" [max]="maxValue" [value]="item" data-show-value="true" data-popup-enabled="true" [(ngModel)]="targetValue" (change)="targetValueChange()"> 
+      <h1 class="tomato">value {{targetValue}}</h1>
     <div *ngFor="let item of target | async">
-      Target: {{item.$value}}
+      <h2>Target: {{item.$value}}</h2>
     </div>
   </div>
-
-    Total: {{grandTotal}}
-
+    <h2>Total: {{grandTotal}}</h2>
   <div *ngFor="let item of remaining | async">
-    Remaining: {{item.$value}}
+    <h2>Remaining: {{item.$value}}</h2>
   </div>  
-
   <input type="text" [(ngModel)]="calorieAmount" (keydown.enter)="add()" placeholder="Calorie Amount"/>
-
   <button (click)="removeAll()">Reset</button>
 </div>
