--- a/calorieTracker/src/styles.css
+++ b/calorieTracker/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    font-family: 'Roboto', sans-serif;
+    background-image: url("./assets/food.jpg");
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+}
