--- a/calorieTracker/src/app/content/content.component.css
+++ b/calorieTracker/src/app/content/content.component.css
@@ -125,6 +125,10 @@ button:active {
     color: lawngreen;
 }
 
+.largefont {
+  font-size: 7rem;
+}
+
 @media only screen and (max-width: 1113px) {
     button {
         padding: 0.8%;
