--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -1,8 +1,12 @@
 <!--data from google sign in: displayName, email, photoURL-->
 <!--Login-->
-  <div *ngIf="(user | async)?.uid" class="gravatar">
+  <div *ngIf="(user | async)?.email" class="gravatar">
     <a title="Log Out"><img *ngIf="(user | async)?.uid" (click)="logout()" [src]="(user | async)?.photoURL" ></a>
     <div class="gravatartext">Hello {{(user | async)?.displayName}}</div>
+  </div>
+  <div *ngIf="(user | async)?.uid && !(user | async)?.email" class="gravatar">
+    <a title="Log Out"><img *ngIf="(user | async)?.uid" (click)="logout()" src="../assets/frog.jpg" ></a>
+    <div class="gravatartext">Hello Anonymous</div>
   </div>
   <div *ngIf="(user | async)?.uid" class="upload">
     <h1 [innerHtml]="upload">Upload</h1>
@@ -10,7 +14,8 @@
   <div id="login" *ngIf="!(user | async)?.uid" [style.display]="display">
     <h1 class="largefont">Welcome to Top Photo</h1>
     <h3>Sign in With:</h3>
-    <button *ngIf="!(user | async)?.uid" (click)="login()">Sign in with Google</button>
+    <button *ngIf="!(user | async)?.uid" (click)="login()">Sign in with Google</button><br>
+    <button *ngIf="!(user | async)?.uid" (click)="loginAnonymous()">Anonymous Sign in</button>
   </div>
 <!--upload file input-->
   <div *ngIf="(user | async)?.uid" >
