display userName below the photo that they uploaded

--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -23,9 +23,13 @@
 }
 
 #imagecontainer {
-    margin-top: -12%; 
+    margin-top: -20%; 
     margin-left: 30%; 
     width: 50%; 
+}
+
+#imagename {
+    float: right;
 }
 
 .largefont {
