--- a/chat/src/app/login/login.component.css
+++ b/chat/src/app/login/login.component.css
@@ -111,3 +111,9 @@
         margin-top: -13%; 
     }
 }
+
+@media only screen and (max-width: 400px) {
+    #imagecontainer {
+        margin-top: -85%;
+    }
+}
